additional code cleaning