@@ -10,16 +10,13 @@ dependencies {
     testImplementation "com.codeborne:selenide:5.20.1"
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
-    compileJava.options.encoding = "UTF-8"
-    compileTestJava.options.encoding = "UTF-8"
     implementation "com.github.javafaker:javafaker:1.0.2"
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 test {
     useJUnitPlatform()
-}
-
-tasks.withType(Test) {
-    useJUnitPlatform()
-    jvmArgs '--enable-preview'
 }
